Minor files Update

--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
     </div>
 
 
-    <div class="about" id="about">
+    <!-- <div class="about" id="about">
         <h1 class="title">About Us</h1>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptas possimus voluptatem unde ullam dicta similique iste ipsam, quaerat et delectus ratione explicabo rem consequatur voluptates corrupti quidem eos officiis velit, ducimus ad esse ipsa veniam voluptate. Obcaecati iste adipisci iure!</p>
         <div class="btn"><a href="#">learn More</a></div>
-    </div>
+    </div> -->
 
-    <div class="service" id="service">
+    <!-- <div class="service" id="service">
         <h1 class="title">Our Services</h1>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas blanditiis voluptate soluta possimus mollitia totam voluptates, beatae illum eligendi nesciunt suscipit error, quam perferendis est pariatur quod sunt quis fugit. Laboriosam, sed dignissimos aperiam expedita laborum recusandae veritatis inventore voluptates doloribus deleniti officiis ab autem quibusdam exercitationem, porro reiciendis vero.</p>
         <div class="diff_Services">
@@ -58,9 +58,9 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, est.</p>
             </div>
         </div>
-    </div>
+    </div> -->
 
-    <div class="contactus" id="contactus">
+    <!-- <div class="contactus" id="contactus">
         <h1 class="title">Contact Us</h1>
         <div class="form"></div>
             <div class="form_input">
@@ -76,9 +76,9 @@
                 <a href="#">Submit</a>
             </div>
         </div>
-    </div>
+    </div> -->
 
-    <div class="ourteam" id="ourteam">
+    <!-- <div class="ourteam" id="ourteam">
         <h1 class="title">Our Team</h1>
         <div class="ourteam_wrapper">
             <div class="team-1 team">
@@ -104,14 +104,14 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
-    <div class="footer">
+    <!-- <div class="footer">
         <a href="#">@ 2019 Coding Market</a>
     </div>
     <div class="arrow">
        <a href="#home"><img src="images/arrow.png" alt="up_arrow"></a> 
-    </div>
+    </div> -->
 </div>
 </body>
 </html>
